# pretix_placeholders

./: .update-locales.sh  LICENSE  MANIFEST.in  Makefile  README.rst  pretixplugin.toml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: style.yml  tests.yml
pretix_stustapay_placeholders/: apps.py  signals.py
pretix_stustapay_placeholders/locale/de_Informal/LC_MESSAGES/: django.po
