[project]
name = "pretix_stustapay_placeholders"
dynamic = ["version"]
description = "Pretix plugin for email placeholder extensions in StuStaPay"
readme = "README.rst"
license = {text = "Apache"}
keywords = ["pretix"]
authors = [
    {name = "Tobias Jülg", email = "tobias.juelg@stusta.de"},
]
maintainers = [
    {name = "Tobias Jülg", email = "tobias.juelg@stusta.de"},
]

dependencies = [
]

[project.entry-points."pretix.plugin"]
pretix_stustapay_placeholders = "pretix_stustapay_placeholders:PretixPluginMeta"

[project.entry-points."distutils.commands"]
build = "pretix_plugin_build.build:CustomBuild"

[build-system]
requires = [
    "setuptools",
    "pretix-plugin-build",
]

[project.urls]
homepage = "https://github.com/stustapay/pretix_placeholders"
repository = "https://github.com/stustapay/pretix_placeholders"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "pretix_stustapay_placeholders.__version__"}

[tool.setuptools.packages.find]
include = ["pretix*"]
namespaces = false
